fixed reference link to font

--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 	body {margin:0px;}
 	canvas {width:100%; height:100%}
 </style>
-<link rel="stylesheet" href="css/font.css">
+<link rel="stylesheet" href="css/fonts.css">
 <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
